fix the website alignment and update the CSS

--- a/challenges/age-calculator-app/src/style.css
+++ b/challenges/age-calculator-app/src/style.css
@@ -41,6 +41,11 @@ body {
   flex-direction: column;
 }
 
+.inputs small {
+  font-size: 11px;
+  color: var(--light-red);
+}
+
 label {
   font-size: 12px;
   text-transform: uppercase;
