--- a/src/style.css
+++ b/src/style.css
@@ -5,15 +5,21 @@ body {
   box-sizing: border-box;
   height: 100%;
   width: 100%;
-  background: #fff;
+  background: #f0f0f0;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
 }
 
-.wrapper {
-  display: table;
-  height: 100%;
-  width: 100%;
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 
 .container-fostrap {
@@ -23,32 +29,33 @@ body {
   vertical-align: middle;
 }
 
-h1.heading {
-  color: #fff;
+.heading h1 {
+  color: #000;
   font-size: 1.5em;
   font-weight: 900;
   margin: 0 0 0.5em;
-  color: #505050;
 }
-@media (min-width: 450px) {
-  h1.heading {
-    font-size: 3.55em;
+@media (max-width: 900px) {
+  .grid {
+    grid-template-columns: 1fr 1fr;
+    gap: 8px;
+  }
+  .card {
+    margin: 0;
+  }
+  .img-card img {
+    height: 100%;
   }
 }
-@media (min-width: 760px) {
-  h1.heading {
-    font-size: 3.05em;
+
+@media (max-width: 650px) {
+  .grid {
+    grid-template-columns: 1fr;
   }
 }
-@media (min-width: 900px) {
-  h1.heading {
-    font-size: 3.25em;
-    margin: 0 0 0.3em;
-  }
-}
+
 .card {
   display: block;
-  margin-bottom: 20px;
   line-height: 1.5;
   background-color: #fff;
   border-radius: 2px;
@@ -68,7 +75,7 @@ h1.heading {
 }
 .img-card img {
   width: 100%;
-  height: 200px;
+  height: 250px;
   object-fit: cover;
   transition: all 0.25s ease;
 }
@@ -76,22 +83,30 @@ h1.heading {
   padding: 15px;
   text-align: left;
 }
+
+.card-content p {
+  margin: 0 0 8px;
+}
 .card-title {
-  margin-top: 0px;
+  margin: 0 0 8px;
   font-weight: 700;
   font-size: 1.65em;
 }
+
 .card-title a {
   color: #000;
-  text-decoration: none !important;
+  text-decoration: none;
   padding-bottom: 1rem;
 }
-.card-read-more {
+.view-code {
   border-top: 1px solid #d4d4d4;
+  text-align: center;
+  padding: 15px 10px;
 }
-.card-read-more a {
-  text-decoration: none !important;
-  padding: 10px;
+
+.view-code a {
+  text-decoration: none;
+  color: #000;
   font-weight: 600;
   text-transform: uppercase;
 }
@@ -141,10 +156,6 @@ h1.heading {
   opacity: 1;
 }
 
-.heading {
-  padding: 0 0 120px;
-  color: #0f1b61;
-}
 .portfolio-link {
   text-align: center;
   display: flex;
@@ -175,4 +186,8 @@ h1.heading {
 }
 .portfolio-link i {
   color: white;
+}
+
+.card-content {
+  padding: 20px 24px 8px;
 }
